# Nats-UI

./: .gitignore  LICENSE  README.md  docker-compose.yml
client/: .gitignore  package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: createStreamPage.jsx  dashboard.jsx  errorPage.jsx  landingPage.jsx  streamDetailsPage.jsx
client/src/css/: createStreamPage.css  dashboard.css  errorPage.css  landingPage.css  streamDetailsPage.css
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: createStreamPage.jsx  dashboard.jsx  errorPage.jsx  landingPage.jsx  streamDetailsPage.jsx
frontend/src/css/: createStreamPage.css  errorPage.css  landingPage.css  streamDetailsPage.css
server/: Dockerfile  README.md  pyproject.toml
server/app/: apps.py  middleware.py
server/app/controllers/creating/: message.py  streams.py
server/app/controllers/monitoring/: __init__.py  dashboard.py  monitor.py
server/app/exceptions/: __init__.py  nats_connection.py
server/app/models/: __init__.py  jetstream.py  message.py  publish.py
server/app/routers/: __init__.py  health.py  read.py  write.py
server/app/utils/: __init__.py  connect.py
